<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/black"
    tools:context=".WalkRecording" >
    
    <fragment
       
        android:id="@+id/mapView"
        class="com.google.android.gms.maps.SupportMapFragment"
        android:layout_width="match_parent"
        android:layout_height="400dp" />

    <ImageButton
        android:id="@+id/walkRecordingHelpButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="16dp"
        android:background="@color/transparent"
        android:contentDescription="@string/helpIconAltText"
        android:src="@drawable/help" />

    <Button
        android:id="@+id/walkRecordingNewPOIButton"
        style="@android:style/TextAppearance.Small"
        android:layout_width="85dp"
        android:layout_height="50dp"
        android:layout_alignParentBottom="true"
        android:layout_below="@+id/mapView"
        android:layout_marginBottom="8dp"
        android:layout_marginLeft="15dp"
        android:layout_marginTop="8dp"
        android:text="@string/walkRecordingNewPOIButtonText"
        android:textColor="@color/light_gray" />

     <Button
         android:id="@+id/walkRecordingUploadButton"
         style="@android:style/TextAppearance.Small"
         android:layout_width="85dp"
         android:layout_height="50dp"
         android:layout_alignBaseline="@+id/walkRecordingNewPOIButton"
         android:layout_alignBottom="@+id/walkRecordingNewPOIButton"
         android:layout_alignParentRight="true"
         android:layout_marginBottom="8dp"
         android:layout_marginRight="15dp"
         android:layout_marginTop="8dp"
         android:text="@string/walkRecordingUploadButtonText"
         android:textColor="@color/light_gray" />
    
</RelativeLayout>
